k8s/namespace.yaml
{
  "apiVersion": "v1",
  "kind": "Namespace",
  "metadata": {
    "name": "<replace-your-name-here>",
    "labels": {
      "name": "<replace-your-name-here>"
    }
  }
}
