k8s/fabrikamfiber.web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fabrikamfiber.web
spec:
  selector:
    matchLabels:
      app: fabrikamfiber.web
  replicas: 1
  template:
    metadata:
      labels:
        app: fabrikamfiber.web
    spec:
      containers:
      - image: patricklang/fabrikamfiber.web:1809
        name: fabrikamfiberweb
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 1
            memory: 800m
          requests:
            cpu: .1
            memory: 300m
      nodeSelector:
        beta.kubernetes.io/os: windows
      tolerations:
      - key: "os"
        operator: "Equal"
        value: "Windows"
        effect: "NoSchedule"
