k8s/fabrikamfiber.web-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fabrikamfiber.web
  name: fabrikamfiberweb-craig
spec:
  ports:
  - port: 80
  type: "LoadBalancer"
  selector:
    app: fabrikamfiber.web
