k8s/fabrikamfiber.web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fabrikamfiber.web
  name: fabrikamfiberweb-int
spec:
  ports:
  - port: 80
  type: "ClusterIP"
  selector:
    app: fabrikamfiber.web
