k8s/fabrikamfiber.web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: fabrikamfiber-ingress
  namespace: <insert-your-name-here>
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-staging
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
  - hosts:
    - kubecon-demo-aks-ingress-craigp.eastus.cloudapp.azure.com
    secretName: tls-secret
  rules:
  - host: kubecon-demo-aks-ingress-craigp.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /<insert-your-name-here>
        backend:
          serviceName: fabrikamfiberweb
          servicePort: 80
